--- a/package.json
+++ b/package.json
@@ -49,6 +49,11 @@
     "@types/react": "17.0.30",
     "@types/react-dom": "17.0.15",
     "@types/react-router-dom": "^5.3.3",
-    "@types/yup": "^0.29.14"
+    "@types/yup": "^0.29.14",
+    "@typescript-eslint/eslint-plugin": "^5.28.0",
+    "@typescript-eslint/parser": "^5.28.0",
+    "eslint": "^8.17.0",
+    "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-react-hooks": "^4.6.0"
   }
 }
