--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "e-learning-platform",
-  "version": "0.1.2",
+  "version": "0.1.4",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.9.3",
@@ -11,8 +11,10 @@
     "@testing-library/react": "12.1.5",
     "@testing-library/user-event": "^13.5.0",
     "formik": "^2.2.9",
+    "i18next": "^21.8.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-i18next": "^11.17.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.7.3",
