--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "12.1.5",
     "@testing-library/user-event": "^13.5.0",
+    "date-fns": "^2.28.0",
     "formik": "^2.2.9",
     "i18next": "^21.8.10",
     "react": "17.0.2",
