--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "12.1.5",
     "@testing-library/user-event": "^13.5.0",
     "date-fns": "^2.28.0",
+    "firebase": "^9.9.0",
     "formik": "^2.2.9",
     "i18next": "^21.8.10",
     "react": "17.0.2",
@@ -54,6 +55,7 @@
     ]
   },
   "devDependencies": {
+    "@types/firebase": "^3.2.1",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.41",
     "@types/react": "17.0.30",
