--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "12.1.5",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
     "date-fns": "^2.28.0",
-    "firebase": "^9.9.0",
     "formik": "^2.2.9",
     "i18next": "^21.8.10",
     "react": "17.0.2",
@@ -55,7 +55,6 @@
     ]
   },
   "devDependencies": {
-    "@types/firebase": "^3.2.1",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.41",
     "@types/react": "17.0.30",
