--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "i18next": "^21.8.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hot-toast": "^2.3.0",
     "react-i18next": "^11.17.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
