--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/lab": "^5.0.0-alpha.90",
     "@mui/material": "^5.8.4",
+    "@mui/x-data-grid": "^5.17.16",
     "@mui/x-date-pickers": "^5.0.5",
     "@tanstack/react-query": "^4.3.7",
     "@testing-library/jest-dom": "^5.16.4",
